# esp-idf-ap-ota

./: .gitignore  CMakeLists.txt  readme.md  sdkconfig.defaults
components/apUpdate/: CMakeLists.txt  Kconfig.projbuild  OTA.c  README.md  apUpdate.c  simpleOTA.c
components/apUpdate/include/: OTA.h  apUpdate.h  otaHandler.h
components/simpleOTA/: CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  apUpdate.c  idf_component.yml  otaHandler.c  simpleOTA.c
components/simpleOTA/include/: apUpdate.h  simpleOTA.h
data/: index.html  main.css  main.js
main/: CMakeLists.txt  idf_component.yml  main.c
